# battleship-demo

./: README.md  package-lock.json  package.json  webpack.config.js
contracts/confidential-contract/: Cargo.toml
contracts/confidential-contract/src/: lib.rs
core/client/: Cargo.toml
core/client/src/: lib.rs
core/game/: Cargo.toml
core/game/src/: lib.rs
src/: template.html
src/components/: board.css  board.js
src/components/Board/: Background.css  Background.js  Board.js  Grid.css  Grid.js  Notification.css  Notification.js  Peg.css  Peg.js  Ship.css  Ship.js  Tile.css  Tile.js
src/components/Footer/: Footer.css
src/pages/multiplayer/: index.js
src/pages/singleplayer/: index.js
test/: test-server.js
