[package]
name = "client"
version = "0.1.0"
authors = ["Andrew Osheroff <andrewosh@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# game-engine = { git = "https://github.com/oasis-game-framework/oasis-game-framework", branch = "1.0.0-alpha" }
# client-proxy = { git = "https://github.com/oasis-game-framework/oasis-game-client-proxy", branch = "1.0.0-alpha" }
core = { path = "../game" }
client-proxy = { path = "/project/oasis-game-client-proxy" }
game-engine = { path = "/project/oasis-game-framework/engine" }


[dependencies.wasm-bindgen]
version = "0.2.29"
features = ["serde-serialize"]
