[package]
name = "core"
version = "0.1.0"
authors = ["Andrew Osheroff <andrewosh@gmail.com>"]

[dependencies]
quick-error = "1.2.2"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
# game-engine = { git = "https://github.com/oasis-game-framework/oasis-game-framework", branch = "1.0.0-alpha" }
# game-engine-derive = { git = "https://github.com/oasis-game-framework/oasis-game-framework", branch = "1.0.0-alpha" }
game-engine = { path = "/project/oasis-game-framework/engine" }
game-engine-derive = { path = "/project/oasis-game-framework/engine/derive" }
lazy_static = "1.2.0"

[dependencies.rand]
version = "0.6.4"
features = ["wasm-bindgen"]

[lib]
crate-type = ["lib"]
